--- a/Project.toml
+++ b/Project.toml
@@ -10,4 +10,5 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
